add teacher wish